# oomph-lib

./: .gitignore  Bell_element_basis.h  C1_basis.h  C1_curved_basic_basis.cc  C1_curved_elements.cc  C1_curved_elements.h  C1_foeppl_von_karman.h  Makefile.am  Makefile.in  README.md  foeppl_von_karman_curved_bell_elements.cc  foeppl_von_karman_curved_bell_elements.h  foeppl_von_karman_elements.cc  hello_world.cc  hello_world.h  my_geom_object.h
C1_basis/: #C1_curved_elements.h#  Bell_element_basis.cc  C1_basis.h  C1_curved_association_matrix.cc  C1_curved_elements.h  Makefile.am  Makefile.in  SubparametricTElement.h  my_geom_object.h
C1_foeppl_von_karman/: C1_foeppl_von_karman.h  Makefile.am  Makefile.in  damped_foeppl_von_karman.h  damped_foeppl_von_karman_bell_elements.cc  damped_foeppl_von_karman_bell_elements.h  damped_foeppl_von_karman_curved_bell_elements.cc  damped_foeppl_von_karman_curved_bell_elements.h  damped_foeppl_von_karman_elements.cc  damped_foeppl_von_karman_elements.h  foeppl_von_karman.h  foeppl_von_karman_bell_elements.cc  foeppl_von_karman_bell_elements.h  foeppl_von_karman_curved_bell_elements.cc  foeppl_von_karman_curved_bell_elements.h  foeppl_von_karman_elements.cc  foeppl_von_karman_elements.h  foeppl_von_karman_equations.cc  foeppl_von_karman_equations.h  thermo_foeppl_von_karman.h  thermo_foeppl_von_karman_bell_elements.cc  thermo_foeppl_von_karman_bell_elements.h  thermo_foeppl_von_karman_curved_bell_elements.cc  thermo_foeppl_von_karman_curved_bell_elements.h  thermo_foeppl_von_karman_elements.cc  thermo_foeppl_von_karman_elements.h
C1_large_displacement_plate_models/: C1_large_displacement_plate_models.h  Makefile.am  Makefile.in  foeppl_von_karman_correction_elements.h  koiter_steigmann_plate_elements.h  large_displacement_plate_curved_bell_elements.cc  large_displacement_plate_curved_bell_elements.h  large_displacement_plate_elements.h  large_displacement_plate_equations.cc  large_displacement_plate_models.h
C1_linear_plate_bending/: C1_linear_plate_bending.h  Makefile.am  Makefile.in  kirchhoff_plate_bending.h  kirchhoff_plate_bending_curved_bell_elements.cc  kirchhoff_plate_bending_curved_bell_elements.h  kirchhoff_plate_bending_elements.cc  kirchhoff_plate_bending_elements.h
demo_drivers/: Makefile  index.html
demo_drivers/FAQ/: Makefile  index.html
demo_drivers/advection_diffusion/: Makefile  index.html
demo_drivers/all_foeppl_von_karman/: Makefile  index.html
demo_drivers/axisym_advection_diffusion/: Makefile  index.html
demo_drivers/axisym_displ_based_foeppl_von_karman/: Makefile  index.html
demo_drivers/axisym_foeppl_von_karman/: Makefile  index.html
demo_drivers/axisym_linear_elasticity/: Makefile  index.html
demo_drivers/axisym_navier_stokes/: Makefile  index.html
demo_drivers/axisym_poroelasticity/: Makefile  index.html
demo_drivers/beam/: Makefile  index.html
demo_drivers/bifurcation_tracking/: Makefile  index.html
demo_drivers/biharmonic/: Makefile  index.html
demo_drivers/darcy/: Makefile  index.html
demo_drivers/eigenproblems/: Makefile  index.html
demo_drivers/extrude_quad_mesh_to_cube_mesh/: Makefile  index.html
demo_drivers/flux_transport/: Makefile  index.html
demo_drivers/foeppl_von_karman/: Makefile  index.html
demo_drivers/fourier_decomposed_helmholtz/: Makefile  index.html
demo_drivers/generalised_newtonian_axisym_navier_stokes/: Makefile  index.html
demo_drivers/generalised_newtonian_navier_stokes/: Makefile  index.html
demo_drivers/heat_transfer_and_melting/: Makefile  index.html
demo_drivers/helmholtz/: Makefile  index.html
demo_drivers/homogenisation/: Makefile  index.html
demo_drivers/interaction/: Makefile  index.html
demo_drivers/linear_elasticity/: Makefile  index.html
demo_drivers/linear_solvers/: Makefile  index.html
demo_drivers/linear_wave/: Makefile  index.html
demo_drivers/linearised_axisym_navier_stokes/: Makefile  index.html
demo_drivers/linearised_free_surface_axisym_navier_stokes/: Makefile  index.html
demo_drivers/linking/: Makefile  index.html
demo_drivers/meshing/: Makefile  index.html
demo_drivers/mpi/: Makefile  index.html
demo_drivers/multi_physics/: Makefile  index.html
demo_drivers/multigrid/: Makefile  index.html
demo_drivers/navier_stokes/: Makefile  index.html
demo_drivers/ode/: Makefile  index.html
demo_drivers/optimisation/: Makefile  index.html
demo_drivers/pml_fourier_decomposed_helmholtz/: Makefile  index.html
demo_drivers/pml_helmholtz/: Makefile  index.html
demo_drivers/pml_time_harmonic_linear_elasticity/: Makefile  index.html
demo_drivers/poisson/: Makefile  index.html
demo_drivers/polar_navier_stokes/: Makefile  index.html
demo_drivers/reaction_diffusion/: Makefile  index.html
demo_drivers/shell/: Makefile  index.html
demo_drivers/solid/: Makefile  index.html
demo_drivers/spherical_advection_diffusion/: Makefile  index.html
demo_drivers/spherical_navier_stokes/: Makefile  index.html
demo_drivers/steady_axisym_advection_diffusion/: Makefile  index.html
demo_drivers/time_harmonic_fourier_decomposed_linear_elasticity/: Makefile  index.html
demo_drivers/time_harmonic_linear_elasticity/: Makefile  index.html
demo_drivers/unsteady_heat/: Makefile  index.html
demo_drivers/womersley/: Makefile  index.html
demo_drivers/young_laplace/: Makefile  index.html
doc/: Makefile  Makefile.in
doc/FAQ/: Makefile  Makefile.in
doc/acknowledgements/: Makefile  Makefile.in
doc/acoustic_fsi/: Makefile
doc/advection_diffusion/: Makefile
doc/axisym_linear_elasticity/: Makefile
doc/axisym_navier_stokes/: Makefile
doc/beam/: Makefile
doc/bugs/: Makefile  (+1 more)
external_src/: Makefile
self_test/: Makefile
src/: Makefile  Makefile.am
src/c1_foeppl_von_karman/: Makefile.am  foeppl_von_karman.h  foeppl_von_karman_curvable_bell_elements.cc  foeppl_von_karman_curvable_bell_elements.h  foeppl_von_karman_curved_bell_elements.h  foeppl_von_karman_curved_bell_elements.h.~UpdatedStructure~  foeppl_von_karman_equations.cc  foeppl_von_karman_equations.h
user_drivers/: Makefile
user_src/: Makefile
(+18077 files in other folders)
